<resources>
    <string name="app_name">Waste categorization</string>
    <string name="BACKEND_URL">https://5782-110-138-165-166.ngrok-free.app</string>

    <!-- DESCRIPTIONS -->
    <string name="desc_IV_camera_view">Camera View</string>
    <string name="desc_Btn_take_pict">Shot Button</string>
    <string name="desc_Btn_upload">Upload Photo</string>
    <string name="desc_Txt1">Buanglah sampah pada tempatnya</string>
</resources>