<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:padding="16dp"
        android:text="@string/desc_Txt1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/IV_camera_view"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_below="@id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/desc_IV_camera_view"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/Btn_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/desc_Btn_upload"
            android:textSize="14sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/Btn_take_pict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc_Btn_take_pict"
            android:text="Take photo"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>